--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,59 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="/">Web Studio</a>
+      <nav>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <a href="mailto:info@devstudio.com">
+        <img src="./images/envelope-icon.svg" alt="Конверт" />
+        info@devstudio.com
+      </a>
+      <a href="tel:+380961111111">
+        <img src="./images/phone-icon.svg" alt="Телефон" />
+        +38 096 111 11 11
+      </a>
+    </header>
+    <main></main>
+    <footer>
+      <p>Web Studio</p>
+      <address>
+        г. Киев, пр-т Леси Украинки, 26 <br />
+        <a href="mailto:info@example.com">info@example.com</a><br />
+        <a href="tel:+380991111111">+38 099 111 11 11</a><br />
+      </address>
+      <p>присоединяйтесь</p>
+      <ul>
+        <li>
+          <a href="">
+            <img src="./images/instagram-elipse.svg" alt="Наш Instagram" />
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/twitter-elipse.svg" alt="Наш Twitter" />
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/facebook-elipse.svg" alt="Наш Facebook" />
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/linkedin-elipse.svg" alt="Наш LinkedIn" />
+          </a>
+        </li>
+      </ul>
+      <p>2020 | Developed by GoIT Students</p>
+    </footer>
+  </body>
 </html>
