Marked up main "section" in portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,146 @@
         +38 096 111 11 11
       </a>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <h1>Наши работы</h1>
+        <ul>
+          <li><button type="button">Все</button></li>
+          <li><button type="button">Веб-сайты</button></li>
+          <li><button type="button">Приложения</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio-tekhnokryak.jpg"
+                alt="Веб-сайт технокряк"
+              />
+              <h2>Технокряк</h2>
+              <p>Веб-сайт</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio-baskeball.jpg"
+                alt="Постер New Orlean vs Golden Stars"
+              />
+              <h2>Постер New Orlean vs Golden Stars</h2>
+              <p>Дизайн</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio-seafood.jpg"
+                alt="Логотип ресторана Seafood"
+              />
+              <h2>Ресторан Seafood</h2>
+              <p>Приложение</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portfolio-headset.jpg" alt="Фото наушников" />
+              <h2>Проект Prime</h2>
+              <p>Маркетинг</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portfolio-boxes.jpg" alt="Макет коробочек" />
+              <h2>Проект Boxes</h2>
+              <p>Приложение</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio-imac.jpg "
+                alt="Веб-сайт Inspiration has no Borders"
+              />
+              <h2>Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio-magazine.jpg"
+                alt="Журнал Limited Edition"
+              />
+              <h2>Издание Limited Edition</h2>
+              <p>Дизайн</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/portfolio-lab.jpg" alt="Бирка Lab" />
+              <h2>Проект LAB</h2>
+              <p>Маркетинг</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/portfolio-notebook.jpg"
+                alt="Приложение Growing Business"
+              />
+              <h2>Growing Business</h2>
+              <p>Приложение</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer>
       <p>Web Studio</p>
       <address>
