Added CSS styles (text and color prop) to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
@@ -11,7 +16,7 @@
     <header>
       <a href="/" class="logo">
         <span class="logo-web">Web</span>
-        <span class="logo-studio">Studio</span></a
+        Studio</a
       >
       <nav>
         <ul class="site-nav">
@@ -43,7 +48,7 @@
           <li>
             <img src="./images/antenna.svg" alt="Антенна" />
             <h3 class="title">Внимание к деталям</h3>
-            <p>
+            <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
@@ -51,7 +56,7 @@
           <li>
             <img src="./images/clock.svg" alt="Часы" />
             <h3 class="title">Пунктуальность</h3>
-            <p>
+            <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
@@ -59,7 +64,7 @@
           <li>
             <img src="./images/notebook.svg" alt="Ноутбук" />
             <h3 class="title">Планирование</h3>
-            <p>
+            <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
@@ -67,7 +72,7 @@
           <li>
             <img src="./images/astronaut.svg" alt="Астронавт" />
             <h3 class="title">Современные технологии</h3>
-            <p>
+            <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -102,7 +107,7 @@
               alt="Фото продуктового дизайнера"
             />
             <h3 class="worker">John Smith</h3>
-            <p>Product Designer</p>
+            <p class="profession">Product Designer</p>
             <ul>
               <li>
                 <a href="">
@@ -132,7 +137,7 @@
               alt="Фото фронтенд разработчика"
             />
             <h3 class="worker">Marta Stewart</h3>
-            <p>Frontend Developer</p>
+            <p class="profession">Frontend Developer</p>
             <ul>
               <li>
                 <a href="">
@@ -159,7 +164,7 @@
           <li>
             <img src="./images/Robert-marketing.png" alt="Фото маркетолога" />
             <h3 class="worker">Robert Jakis</h3>
-            <p>Marketing</p>
+            <p class="profession">Marketing</p>
             <ul>
               <li>
                 <a href="">
@@ -186,7 +191,7 @@
           <li>
             <img src="./images/Martin-ui.png" alt="Фото дизайнера" />
             <h3 class="worker">Martin Doe</h3>
-            <p>UI Designer</p>
+            <p class="profession">UI Designer</p>
             <ul>
               <li>
                 <a href="">
@@ -250,8 +255,11 @@
       </section>
     </main>
     <footer>
-      <p><span class="logo-web">Web</span> Studio</p>
-      <address>
+      <p class="footer-logo">
+        <span class="logo-web">Web</span>
+        Studio
+      </p>
+      <address class="footer-address">
         г. Киев, пр-т Леси Украинки, 26 <br />
         <a href="mailto:info@example.com" class="footer-contacts"
           >info@example.com</a
@@ -259,7 +267,7 @@
         <a href="tel:+380991111111" class="footer-contacts">+38 099 111 11 11</a
         ><br />
       </address>
-      <p>присоединяйтесь</p>
+      <p class="call-action">присоединяйтесь</p>
       <ul>
         <li>
           <a href="">
