--- a/portfolio.html
+++ b/portfolio.html
@@ -4,22 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link />
   </head>
   <body>
+    <!--Шапка-->
     <header>
-      <a href="/">Web Studio</a>
+      <a href="/" class="logo">
+        <span class="logo-web">Web</span>
+        Studio</a
+      >
       <nav>
-        <ul>
+        <ul class="site-nav">
           <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">
+      <a href="mailto:info@devstudio.com" class="contacts">
         <img src="./images/envelope-icon.svg" alt="Конверт" />
         info@devstudio.com
       </a>
-      <a href="tel:+380961111111">
+      <a href="tel:+380961111111" class="contacts">
         <img src="./images/phone-icon.svg" alt="Телефон" />
         +38 096 111 11 11
       </a>
@@ -165,13 +175,19 @@
       </section>
     </main>
     <footer>
-      <p>Web Studio</p>
-      <address>
+      <p class="footer-logo">
+        <span class="logo-web">Web</span>
+        Studio
+      </p>
+      <address class="footer-address">
         г. Киев, пр-т Леси Украинки, 26 <br />
-        <a href="mailto:info@example.com">info@example.com</a><br />
-        <a href="tel:+380991111111">+38 099 111 11 11</a><br />
+        <a href="mailto:info@example.com" class="footer-contacts"
+          >info@example.com</a
+        ><br />
+        <a href="tel:+380991111111" class="footer-contacts">+38 099 111 11 11</a
+        ><br />
       </address>
-      <p>присоединяйтесь</p>
+      <p class="call-action">присоединяйтесь</p>
       <ul>
         <li>
           <a href="">
@@ -194,7 +210,7 @@
           </a>
         </li>
       </ul>
-      <p>2020 | Developed by GoIT Students</p>
+      <p class="developed-by">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
