--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900"
     />
     <link rel="stylesheet" href="./css/main.css" />
-    <link />
+    <link rel="stylesheet" href="./css/portfolio.css" />
   </head>
   <body>
     <!--Шапка-->
@@ -37,23 +37,29 @@
     <main>
       <section>
         <h1>Наши работы</h1>
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
-        </ul>
-        <ul>
+        <ul class="filter">
+          <li><button type="button" class="filter-button">Все</button></li>
           <li>
-            <a href="">
+            <button type="button" class="filter-button">Веб-сайты</button>
+          </li>
+          <li>
+            <button type="button" class="filter-button">Приложения</button>
+          </li>
+          <li><button type="button" class="filter-button">Дизайн</button></li>
+          <li>
+            <button type="button" class="filter-button">Маркетинг</button>
+          </li>
+        </ul>
+        <ul class="our-portfolio">
+          <li>
+            <a href="" class="link">
               <img
                 src="./images/portfolio-tekhnokryak.jpg"
                 alt="Веб-сайт технокряк"
               />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
-              <p>
+              <h2 class="title">Технокряк</h2>
+              <p class="description">Веб-сайт</p>
+              <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -61,14 +67,14 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/portfolio-baskeball.jpg"
                 alt="Постер New Orlean vs Golden Stars"
               />
-              <h2>Постер New Orlean vs Golden Stars</h2>
-              <p>Дизайн</p>
-              <p>
+              <h2 class="title">Постер New Orlean vs Golden Stars</h2>
+              <p class="description">Дизайн</p>
+              <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -76,14 +82,14 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/portfolio-seafood.jpg"
                 alt="Логотип ресторана Seafood"
               />
-              <h2>Ресторан Seafood</h2>
-              <p>Приложение</p>
-              <p>
+              <h2 class="title">Ресторан Seafood</h2>
+              <p class="description">Приложение</p>
+              <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -91,11 +97,11 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img src="./images/portfolio-headset.jpg" alt="Фото наушников" />
-              <h2>Проект Prime</h2>
-              <p>Маркетинг</p>
-              <p>
+              <h2 class="title">Проект Prime</h2>
+              <p class="description">Маркетинг</p>
+              <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -103,11 +109,11 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img src="./images/portfolio-boxes.jpg" alt="Макет коробочек" />
-              <h2>Проект Boxes</h2>
-              <p>Приложение</p>
-              <p>
+              <h2 class="title">Проект Boxes</h2>
+              <p class="description">Приложение</p>
+              <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -115,14 +121,14 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/portfolio-imac.jpg "
                 alt="Веб-сайт Inspiration has no Borders"
               />
-              <h2>Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
-              <p>
+              <h2 class="title">Inspiration has no Borders</h2>
+              <p class="description">Веб-сайт</p>
+              <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -130,14 +136,14 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/portfolio-magazine.jpg"
                 alt="Журнал Limited Edition"
               />
-              <h2>Издание Limited Edition</h2>
-              <p>Дизайн</p>
-              <p>
+              <h2 class="title">Издание Limited Edition</h2>
+              <p class="description">Дизайн</p>
+              <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -145,11 +151,11 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img src="./images/portfolio-lab.jpg" alt="Бирка Lab" />
-              <h2>Проект LAB</h2>
-              <p>Маркетинг</p>
-              <p>
+              <h2 class="title">Проект LAB</h2>
+              <p class="description">Маркетинг</p>
+              <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
@@ -157,14 +163,14 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/portfolio-notebook.jpg"
                 alt="Приложение Growing Business"
               />
-              <h2>Growing Business</h2>
-              <p>Приложение</p>
-              <p>
+              <h2 class="title">Growing Business</h2>
+              <p class="description">Приложение</p>
+              <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
